<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description" />


    <TextView
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_github_url" />



    <Button
        android:id="@+id/flash"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/killapp"
        android:layout_gravity="center_horizontal"
        android:text="@string/default_killapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>